[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/LiberationSans-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/vertical ellipsis.png" type="Texture" id=2]
[ext_resource path="res://src/BottomGUI.gd" type="Script" id=3]
[ext_resource path="res://assets/click.wav" type="AudioStream" id=4]
[ext_resource path="res://src/MenuButton.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://assets/LiberationSans-Regular.ttf"

[sub_resource type="DynamicFont" id=6]
size = 24
font_data = SubResource( 5 )

[sub_resource type="Theme" id=7]
default_font = SubResource( 6 )

[sub_resource type="DynamicFont" id=8]
size = 32
font_data = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -730.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MetricsButton" type="Button" parent="."]
margin_right = 93.0
margin_bottom = 70.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Metrics"

[node name="DevelopersButton" type="Button" parent="."]
margin_left = 97.0
margin_right = 228.0
margin_bottom = 70.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
text = "Developers"

[node name="DailyButton" type="Button" parent="."]
margin_left = 232.0
margin_right = 326.0
margin_bottom = 70.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
text = "Daily"

[node name="TasksButton" type="Button" parent="."]
margin_left = 330.0
margin_right = 423.0
margin_bottom = 70.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "Tasks"

[node name="MenuButton" type="MenuButton" parent="."]
margin_left = 427.0
margin_right = 479.0
margin_bottom = 70.0
theme = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
icon = ExtResource( 2 )
script = ExtResource( 5 )

[node name="ClickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
